<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/fb"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/polski_more"
        android:gravity="center"
        android:textSize="15sp"
        />



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:id = "@+id/layoutEmail"
            android:layout_marginTop = "58dp"
            android:layout_marginStart = "8dp"
            android:layout_marginEnd = "8dp"
            android:padding="6dp"
            app:endIconMode="clear_text"
            style = "@style/Widget.MaterialComponents.TextInputLayout.FilledBox">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/PhoneNumberOrEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number_or_email_address"
                android:inputType="textEmailAddress"
                android:textColorHighlight="#2196F3"
                android:textColorLink="#2196F3" />



        </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:padding="6dp"
        app:endIconMode="password_toggle">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHighlight="#2196F3"
            android:textColorLink="#2196F3"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/blue"
        android:text="@string/button"
        tools:ignore="TextContrastCheck" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="forget in password"
        android:textSize="16dp"
        android:textColor="@color/blue"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />

</LinearLayout>